r __COPYRIGHT__
# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE 0.96 - XXX

  From Chad Austin:

  - Make the CacheDir() directory if it doesn't already exist.

  From Chris Hoeppler:

  - Initialize the name of a Scanner.Classic scanner correctly.

  From Steven Knight:

  - Add an Execute() method for executing actions directly.

  - Support passing environment override keyword arguments to Command().

  - Fix use of $MSVS_IGNORE_IDE_PATHS, which was broken when we added
    support for $MSVS_USE_MFC_DIRS last release.

  - Make env.Append() and env.Prepend() act like the underlying Python
    behavior when the variable being appended to is a UserList object.

  From Gary Oberbrunner:

  - Add a --debug=presub option to print actions prior to substitution.



RELEASE 0.95 - Mon, 08 Mar 2004 06:43:20 -0600

  From Chad Austin:

  - Replace print statements with calls to sys.stdout.write() so output
    lines stay together when -j is used.

  - Add portability fixes for a number of tests.

  - Accomodate the fact that Cygwin's os.path.normcase() lies about
    the underlying system being case-sensitive.

  - Fix an incorrect _concat() call in the $RCINCFLAGS definition for
    the mingw Tool.

  - Fix a problem with the msvc tool with Python versions prior to 2.3.

  - Add support for a "toolpath" Tool() and Environment keyword that
    allows Tool modules to be found in specified local directories.

  - Work around Cygwin Python's silly fiction that it's using a
    case-sensitive file system.

  - More robust handling of data in VCComponents.dat.

  - If the "env" command is available, spawn commands with the more
    general "env -" instead of "env -i".

  From Kerim Borchaev:

  - Fix a typo in a msvc.py's registry lookup:  "VCComponents.dat", not
    "VSComponents.dat".

  From Chris Burghart:

  - Fix the ability to save/restore a PackageOption to a file.